[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prettytable>=3.17.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
# 核心修正：已經將 `exclude` 從 [project] 區塊中移除

# 正確修正：將原本想排除的目錄，利用 tool.setuptools 的規則來定義
[tool.setuptools.packages.find]
exclude = ["tests*", ".github*", ".venv*"]

[tool.setuptools]
include-package-data = true